--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Somando dois números</h1>
     <input type="button" value="Iniciar a soma">
+    <p>O resultado vem aqui...</p>
 </body>
 </html>
