--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>Somando dois números</h1>
     <input type="button" value="Iniciar a soma">
     <p>O resultado vem aqui...</p>
+
+    <script src="script.js"></script>
 </body>
 </html>
