--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Somando dois números</title>
 </head>
 <body>
-    <h1>Somando dois números</h1>
+    <h1>
+        Somando dois números
+    </h1>
     <input type="button" value="Iniciar a soma">
     <p>O resultado vem aqui...</p>
 
