--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         Somando dois números
     </h1>
     <input type="button" value="Iniciar a soma">
-    <p>O resultado vem aqui...</p>
+    <p>
+        O resultado vem aqui...
+    </p>
 
     <script src="script.js"></script>
 </body>
