--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Somando dois números</title>
+    <title>
+        Somando dois números
+    </title>
 </head>
 <body>
     <h1>
