--- a/index.html
+++ b/index.html
@@ -14,12 +14,8 @@
     <h1>
         Somando dois números
     </h1>
-    <input id="somar" type="button" value="Iniciar a soma">
+    <input id="s" type="button" value="Iniciar a soma">
      <p>O resultado vem aqui....</p>
-        =======
-        <p>
-            O resultado vem aqui...
-        </p>
         <div>
 
         </div>
